tests/snapshots/convert__Element__expr_child.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", null, [
    a
]);

