tests/snapshots/convert__Element__fragment_child.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode, Fragment } from "vue";
createVNode("div", null, [
    createVNode(Fragment, null, [])
]);

