tests/snapshots/convert__Element__jsx_child.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode, createElementVNode } from "vue";
const _hoisted_ = createElementVNode("div", null, null, -1);
createVNode("div", null, [
    _hoisted_
]);

