tests/snapshots/convert__Element__spread_child.snap
---
source: tests/convert.rs
expression: code
---
import { createVNode } from "vue";
createVNode("div", null, [
    ...a
]);

